# llamacap

./: .gitignore  GUIDE.md  README.md  config.toml  llamacap-gui.bat  pyproject.toml
profiles/: krea2.toml
prompts/: krea2_caption.txt
scripts/: caption.py  gui.py
src/llamacap/: binary_resolver.py  captioner.py  cli.py  config.py  errors.py  image_utils.py  model_resolver.py  postprocess.py  profiles.py  resize.py  runner.py  server.py  sidecar.py
src/llamacap/gui/: __init__.py  app.py  profile_editor.py  state.py  theme.py  widgets.py
tests/: test_cli.py  test_config.py  test_gui_state.py  test_resize.py  test_sidecar.py  test_theme.py
