[project]
name = "llamacap"
version = "0.1.0"
description = "llama.cpp-based batch image captioning for LoRA training data prep."
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
    "tqdm>=4.66",
]

[project.scripts]
llamacap = "llamacap.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llamacap"]
